# appledb-mcp

./: .gitignore  CHAI_VALIDATION_REPORT.md  CRITICAL_BUGS_FIXED.md  DEVELOPMENT_SETUP.md  LLDB_COMPATIBILITY_REVIEW.md  LLDB_SERVICE_ARCHITECTURE.md  LLDB_SERVICE_TEST_REPORT.md  Makefile  PHASE1_COMPLETE.md  PHASE2_SUMMARY.md  PHASE6_IMPLEMENTATION_CHECKLIST.md  PHASE6_SUMMARY.md  QUICK_SETUP.md  README.md  TEST_RESULTS.md  cleanup.sh  pyproject.toml  run_appledb_mcp.sh  setup_lldb_symlink.sh  test_attach.py  test_debug_program  test_debug_program.c  test_integration.py  test_lldb_breakpoint.py  test_lldb_focused.py  test_manual.py  validate_with_chai.py  verify_phase6.py
AppleDBRuntime/: Package.swift  build.sh
AppleDBRuntime/.build/: build.db  debug.yaml  plugin-tools.yaml
examples/: README.md  claude_desktop_config.json
frameworks/: .gitkeep
src/appledb_mcp/: __init__.py  __main__.py  cli.py  config.py  debugger.py  lldb_client.py  models.py  server.py  tcp_client.py
src/common/: __init__.py  errors.py
src/lldb_service/: __init__.py  __main__.py  debugger.py  handlers.py  models.py  server.py  tcp_server.py
test_debug_program.dSYM/Contents/: Info.plist
tests/: conftest.py  test_breakpoint.py  test_cli.py  test_command.py  test_debugger_helpers.py  test_execution.py  test_framework.py  test_heap.py  test_inspection.py  test_lldb_client.py  test_lldb_client_crash_recovery.py  test_lldb_client_integration.py  test_tcp_client.py  test_tools.py
tests/fixtures/: test_app  test_app.c
tests/lldb_service/: test_lldb_service.py  verify_lldb_service.sh  (+1 more)
(+177 files in other folders)
